--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ server:
 #ddl-auto: update는  필드 수정 시에 필요한 옵션이다 (필드 삭제하려면 db에서 직접 하세요)
 
 spring:
+  mustache:
+    expose-session-attributes: true
+    
   datasource:
       url: jdbc:mariadb://localhost:3306/greendb
       driver-class-name: org.mariadb.jdbc.Driver
